--- a/index.html
+++ b/index.html
@@ -1,64 +1,71 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TH Soluções em TI - Início</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
 
-<!-- Cabeçalho -->
-<header class="header">
-    <div class="container">
-        <h1 class="logo">TH Soluções em TI</h1>
-        <nav class="navbar">
-            <ul>
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="servicos.html">Serviços</a></li>
-                <li><a href="sobre.html">Sobre Nós</a></li>
-                <li><a href="contatos.html">Contatos</a></li>
-            </ul>
-        </nav>
-    </div>
-</header>
-
-<!-- Seção Hero -->
-<section class="hero">
-    <div class="hero-content">
-        <h2>Impulsione seu Negócio com Tecnologia Inovadora</h2>
-        <p>Soluções em TI feitas para transformar sua empresa.</p>
-        <a href="servicos.html" class="btn-primary">Conheça nossos Serviços</a>
-    </div>
-</section>
-
-<!-- Serviços Destaques -->
-<section class="highlights">
-    <div class="container">
-        <h2 class="section-title">Nossos Serviços</h2>
-        <div class="features">
-            <div class="feature">
-                <h3>Cyber Security</h3>
-                <p>Proteção avançada para seus dados e redes.</p>
-            </div>
-            <div class="feature">
-                <h3>Infraestrutura de Redes</h3>
-                <p>Conectividade estável e eficiente para sua empresa.</p>
-            </div>
-            <div class="feature">
-                <h3>Suporte Técnico</h3>
-                <p>Equipe dedicada para atender suas necessidades.</p>
-            </div>
+    <!-- Cabeçalho -->
+    <header class="header">
+        <div class="container">
+            <h1 class="logo">TH Soluções em TI</h1>
+            <nav class="navbar">
+                <ul>
+                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="servicos.html">Serviços</a></li>
+                    <li><a href="sobre.html">Sobre Nós</a></li>
+                    <li><a href="contatos.html">Contatos</a></li>
+                </ul>
+            </nav>
         </div>
-    </div>
-</section>
+    </header>
 
-<!-- Rodapé -->
-<footer class="footer">
-    <div class="container">
-        <p>&copy; 2024 TH Soluções em TI. Todos os direitos reservados.</p>
-    </div>
-</footer>
+    <!-- Seção Hero -->
+    <main>
+        <section class="hero">
+            <div class="hero-content">
+                <h2>Impulsione seu Negócio com Tecnologia Inovadora</h2>
+                <p>Soluções em TI feitas para transformar sua empresa.</p>
+                <a href="servicos.html" class="btn-primary">Conheça nossos Serviços</a>
+            </div>
+        </section>
+
+        <!-- Serviços Destaques -->
+        <section class="highlights">
+            <div class="container">
+                <h2 class="section-title">Nossos Serviços</h2>
+                <div class="features">
+                    <article class="feature">
+                        <h3>Cyber Security</h3>
+                        <p>Proteção avançada para seus dados e redes.</p>
+                    </article>
+
+                    <article class="feature">
+                        <h3>Infraestrutura de Redes</h3>
+                        <p>Conectividade estável e eficiente para sua empresa.</p>
+                    </article>
+
+                    <article class="feature">
+                        <h3>Suporte Técnico</h3>
+                        <p>Equipe dedicada para atender suas necessidades.</p>
+                    </article>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <!-- Rodapé -->
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2024 TH Soluções em TI. Todos os direitos reservados.</p>
+        </div>
+    </footer>
 
 </body>
+
 </html>
