--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
             </div>
         </section>
 
+        <!-- Sobre a Empresa -->
+        <section class="about">
+            <div class="container">
+                <h2 class="section-title">Sobre a TH Soluções em TI</h2>
+                <p>A TH Soluções em TI é uma empresa especializada em fornecer soluções tecnológicas de ponta para empresas de todos os tamanhos. Nosso compromisso é oferecer inovação, segurança e eficiência para garantir que seus processos tecnológicos se integrem perfeitamente aos seus objetivos de negócio.</p>
+                <p>Com uma equipe altamente qualificada, oferecemos uma gama de serviços para atender às necessidades de nossos clientes em diversos setores, sempre com um atendimento personalizado e soluções que realmente fazem a diferença.</p>
+            </div>
+        </section>
+
         <!-- Serviços Destaques -->
         <section class="highlights">
             <div class="container">
@@ -55,6 +64,34 @@
                         <p>Equipe dedicada para atender suas necessidades.</p>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <!-- Tabela de Serviços -->
+        <section>
+            <div class="container">
+                <table class="service-table">
+                    <thead>
+                        <tr>
+                            <th>Serviço</th>
+                            <th>Descrição</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Cyber Security</td>
+                            <td>Proteção avançada para dados e redes, evitando ataques cibernéticos e garantindo a integridade da sua informação.</td>
+                        </tr>
+                        <tr>
+                            <td>Infraestrutura de Redes</td>
+                            <td>Instalação, manutenção e otimização de redes corporativas para garantir conectividade estável e segura.</td>
+                        </tr>
+                        <tr>
+                            <td>Suporte Técnico</td>
+                            <td>Atendimento especializado, com suporte remoto e presencial para resolver rapidamente qualquer problema técnico.</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </section>
     </main>
