--- a/index.html
+++ b/index.html
@@ -51,25 +51,26 @@
                 <div class="features-grid">
                     <div class="feature">
                         <h3>Cyber Security</h3>
-                        <p>Proteção avançada para seus dados e redes.</p>
+                        <p>Proteção avançada para dados e redes, evitando ataques cibernéticos.</p>
                     </div>
 
                     <div class="feature">
                         <h3>Infraestrutura de Redes</h3>
-                        <p>Conectividade estável e eficiente para sua empresa.</p>
+                        <p>Instalação e manutenção de redes corporativas para garantir conectividade estável e segura.</p>
                     </div>
 
                     <div class="feature">
                         <h3>Suporte Técnico</h3>
-                        <p>Equipe dedicada para atender suas necessidades.</p>
+                        <p>Suporte remoto e presencial, garantindo resolução rápida de problemas técnicos.</p>
                     </div>
                 </div>
             </div>
         </section>
 
         <!-- Tabela de Serviços -->
-        <section>
+        <section class="service-table-section">
             <div class="container">
+                <h2 class="section-title">Detalhes de Nossos Serviços</h2>
                 <table class="service-table">
                     <thead>
                         <tr>
@@ -80,7 +81,7 @@
                     <tbody>
                         <tr>
                             <td>Cyber Security</td>
-                            <td>Proteção avançada para dados e redes, evitando ataques cibernéticos e garantindo a integridade da sua informação.</td>
+                            <td>Proteção avançada para dados e redes, evitando ataques cibernéticos e garantindo a integridade da informação.</td>
                         </tr>
                         <tr>
                             <td>Infraestrutura de Redes</td>
