--- a/index.html
+++ b/index.html
@@ -1,108 +1,55 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TH Soluções em TI - Início</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>TH Soluções em TI</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
-
-    <!-- Cabeçalho -->
-    <header class="header">
-        <div class="container">
-            <h1 class="logo">TH Soluções em TI</h1>
-            <nav class="navbar">
-                <ul>
-                    <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="servicos.html">Serviços</a></li>
-                    <li><a href="sobre.html">Sobre Nós</a></li>
-                    <li><a href="contatos.html">Contatos</a></li>
-                </ul>
-            </nav>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="servicos.html">Serviços</a></li>
+                <li><a href="contato.html">Contato</a></li>
+            </ul>
+        </nav>
+        <div class="hero">
+            <h1>Bem-vindo à TH Soluções em TI</h1>
+            <p>Soluções de tecnologia avançada para o seu negócio</p>
+            <a href="servicos.html" class="btn">Nossos Serviços</a>
         </div>
     </header>
 
-    <!-- Seção Hero -->
-    <main>
-        <section class="hero">
-            <div class="hero-content">
-                <h2>Impulsione seu Negócio com Tecnologia Inovadora</h2>
-                <p>Soluções em TI feitas para transformar sua empresa.</p>
-                <a href="servicos.html" class="btn-primary">Conheça nossos Serviços</a>
-            </div>
-        </section>
-
-        <!-- Sobre a Empresa -->
-        <section class="about">
-            <div class="container">
-                <h2 class="section-title">Sobre a TH Soluções em TI</h2>
-                <p>A TH Soluções em TI é uma empresa especializada em fornecer soluções tecnológicas de ponta para empresas de todos os tamanhos. Nosso compromisso é oferecer inovação, segurança e eficiência para garantir que seus processos tecnológicos se integrem perfeitamente aos seus objetivos de negócio.</p>
-                <p>Com uma equipe altamente qualificada, oferecemos uma gama de serviços para atender às necessidades de nossos clientes em diversos setores, sempre com um atendimento personalizado e soluções que realmente fazem a diferença.</p>
-            </div>
-        </section>
-
-        <!-- Serviços Destaques -->
-        <section class="highlights">
-            <div class="container">
-                <h2 class="section-title">Nossos Serviços</h2>
-                <div class="features-grid">
-                    <div class="feature">
-                        <h3>Cyber Security</h3>
-                        <p>Proteção avançada para dados e redes, evitando ataques cibernéticos.</p>
-                    </div>
-
-                    <div class="feature">
-                        <h3>Infraestrutura de Redes</h3>
-                        <p>Instalação e manutenção de redes corporativas para garantir conectividade estável e segura.</p>
-                    </div>
-
-                    <div class="feature">
-                        <h3>Suporte Técnico</h3>
-                        <p>Suporte remoto e presencial, garantindo resolução rápida de problemas técnicos.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Tabela de Serviços -->
-        <section class="service-table-section">
-            <div class="container">
-                <h2 class="section-title">Detalhes de Nossos Serviços</h2>
-                <table class="service-table">
-                    <thead>
-                        <tr>
-                            <th>Serviço</th>
-                            <th>Descrição</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Cyber Security</td>
-                            <td>Proteção avançada para dados e redes, evitando ataques cibernéticos e garantindo a integridade da informação.</td>
-                        </tr>
-                        <tr>
-                            <td>Infraestrutura de Redes</td>
-                            <td>Instalação, manutenção e otimização de redes corporativas para garantir conectividade estável e segura.</td>
-                        </tr>
-                        <tr>
-                            <td>Suporte Técnico</td>
-                            <td>Atendimento especializado, com suporte remoto e presencial para resolver rapidamente qualquer problema técnico.</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </section>
-    </main>
-
-    <!-- Rodapé -->
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2024 TH Soluções em TI. Todos os direitos reservados.</p>
+    <section class="services">
+        <div class="service-item">
+            <h3>Cyber Security</h3>
+            <p>Proteja sua infraestrutura digital com as melhores práticas de segurança.</p>
         </div>
+        <div class="service-item">
+            <h3>Infraestrutura de Redes</h3>
+            <p>Planejamento e execução de cabeamento estruturado para uma rede segura e eficiente.</p>
+        </div>
+        <div class="service-item">
+            <h3>Segurança Eletrônica</h3>
+            <p>Sistemas avançados de vigilância para proteger seu ambiente físico.</p>
+        </div>
+        <div class="service-item">
+            <h3>Service Desk / Suporte</h3>
+            <p>Suporte técnico especializado para resolver seus problemas rapidamente.</p>
+        </div>
+        <div class="service-item">
+            <h3>IoT</h3>
+            <p>Transforme seu negócio com soluções inteligentes conectadas à Internet das Coisas.</p>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 TH Soluções em TI</p>
     </footer>
 
+    <script src="js/script.js"></script>
 </body>
 </html>
