--- a/sobre.html
+++ b/sobre.html
@@ -1,75 +1,1 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre - TH Soluções em TI</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="sobre.html">Sobre</a></li>
-                <li><a href="servicos.html">Serviços</a></li>
-                <li><a href="contato.html">Contato</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <section class="about">
-        <h2>Sobre Nós</h2>
-        <table class="about-table">
-            <tr>
-                <th>Descrição</th>
-            </tr>
-            <tr>
-                <td>A TH Soluções em TI é uma empresa especializada em oferecer serviços tecnológicos de ponta para pequenas e grandes empresas. Estamos aqui para ajudar a transformar o seu negócio com soluções de segurança, redes, suporte técnico, e muito mais.</td>
-            </tr>
-        </table>
-    </section>
-
-    <section class="project">
-        <h2>Nosso Projeto</h2>
-        <table class="project-table">
-            <tr>
-                <th>Objetivo</th>
-                <th>Benefícios</th>
-            </tr>
-            <tr>
-                <td>Desenvolver soluções tecnológicas que atendem às necessidades de segurança e infraestrutura dos nossos clientes.</td>
-                <td>Melhorar a eficiência, segurança e conectividade das empresas, proporcionando inovação e soluções inteligentes.</td>
-            </tr>
-        </table>
-    </section>
-
-    <section class="values">
-        <h2>Nossos Valores</h2>
-        <table class="values-table">
-            <tr>
-                <th>Valor</th>
-                <th>Descrição</th>
-            </tr>
-            <tr>
-                <td>Compromisso</td>
-                <td>Comprometidos com a entrega de soluções que atendam às necessidades dos nossos clientes com excelência.</td>
-            </tr>
-            <tr>
-                <td>Inovação</td>
-                <td>Buscamos sempre inovar e aplicar as mais novas tecnologias para melhorar os processos das empresas.</td>
-            </tr>
-            <tr>
-                <td>Segurança</td>
-                <td>Garantimos a segurança dos dados e sistemas dos nossos clientes com as melhores práticas de mercado.</td>
-            </tr>
-        </table>
-    </section>
-
-    <footer>
-        <p>&copy; 2024 TH Soluções em TI</p>
-    </footer>
-
-    <script src="js/script.js"></script>
-</body>
-</html>
+<!DOCTYPE html> <html lang="pt-br"> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>Sobre - TH Soluções em TI</title> <link rel="stylesheet" href="css/style.css"> </head> <body> <header> <nav> <ul> <li><a href="index.html">Página inicial</a></li> <li><a href="sobre.html" >Sobre</a></li> <li><a href="servicos.html">Serviços</a></li> <li><a href="contato.html">Contato</a> </li> </ul> </nav> </header> <seção class="about"> <h2>Sobre Nós</h2> <p>A TH Soluções em TI é uma empresa especializada em oferecer serviços tecnológicos de ponta para pequenas e grandes empresas. Estamos aqui para ajudar a transformar seu negócio com soluções de segurança, redes, suporte técnico, e muito mais.</p> </section> <footer> <p>© 2024 TH Soluções em TI</p> </footer> <script src="js/script.js"></script> </body> </html>
