--- a/sobre.html
+++ b/sobre.html
@@ -1,1 +1,32 @@
-<!DOCTYPE html> <html lang="pt-br"> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>Sobre - TH Soluções em TI</title> <link rel="stylesheet" href="css/style.css"> </head> <body> <header> <nav> <ul> <li><a href="index.html">Página inicial</a></li> <li><a href="sobre.html" >Sobre</a></li> <li><a href="servicos.html">Serviços</a></li> <li><a href="contato.html">Contato</a> </li> </ul> </nav> </header> <seção class="about"> <h2>Sobre Nós</h2> <p>A TH Soluções em TI é uma empresa especializada em oferecer serviços tecnológicos de ponta para pequenas e grandes empresas. Estamos aqui para ajudar a transformar seu negócio com soluções de segurança, redes, suporte técnico, e muito mais.</p> </section> <footer> <p>© 2024 TH Soluções em TI</p> </footer> <script src="js/script.js"></script> </body> </html>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sobre - TH Soluções em TI</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Página inicial</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="servicos.html">Serviços</a></li>
+                <li><a href="contato.html">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="about">
+        <h2>Sobre Nós</h2>
+        <p>A TH Soluções em TI é uma empresa especializada em oferecer serviços tecnológicos de ponta para pequenas e grandes empresas. Estamos aqui para ajudar a transformar seu negócio com soluções de segurança, redes, suporte técnico, e muito mais.</p>
+    </section>
+
+    <footer>
+        <p>© 2024 TH Soluções em TI</p>
+    </footer>
+
+    <script src="js/script.js"></script>
+</body>
+</html>
