--- a/sobre.html
+++ b/sobre.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre - TH Soluções em TI</title>
+    <title>Serviços - TH Soluções em TI</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Página inicial</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
                 <li><a href="servicos.html">Serviços</a></li>
                 <li><a href="contato.html">Contato</a></li>
@@ -18,13 +18,32 @@
         </nav>
     </header>
 
-    <section class="about">
-        <h2>Sobre Nós</h2>
-        <p>A TH Soluções em TI é uma empresa especializada em oferecer serviços tecnológicos de ponta para pequenas e grandes empresas. Estamos aqui para ajudar a transformar seu negócio com soluções de segurança, redes, suporte técnico, e muito mais.</p>
+    <section class="services-list">
+        <h2>Nossos Serviços</h2>
+        <div class="service-item">
+            <h3>Cyber Security</h3>
+            <p>Proteja sua infraestrutura digital com as melhores práticas de segurança.</p>
+        </div>
+        <div class="service-item">
+            <h3>Infraestrutura de Redes</h3>
+            <p>Planejamento e execução de cabeamento estruturado para uma rede segura e eficiente.</p>
+        </div>
+        <div class="service-item">
+            <h3>Segurança Eletrônica</h3>
+            <p>Sistemas avançados de vigilância para proteger seu ambiente físico.</p>
+        </div>
+        <div class="service-item">
+            <h3>Service Desk / Suporte</h3>
+            <p>Suporte técnico especializado para resolver seus problemas rapidamente.</p>
+        </div>
+        <div class="service-item">
+            <h3>IoT</h3>
+            <p>Transforme seu negócio com soluções inteligentes conectadas à Internet das Coisas.</p>
+        </div>
     </section>
 
     <footer>
-        <p>© 2024 TH Soluções em TI</p>
+        <p>&copy; 2024 TH Soluções em TI</p>
     </footer>
 
     <script src="js/script.js"></script>
