--- a/sobre.html
+++ b/sobre.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Página inicial</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
                 <li><a href="servicos.html">Serviços</a></li>
                 <li><a href="contato.html">Contato</a></li>
@@ -18,32 +18,34 @@
         </nav>
     </header>
 
-    <section class="services-list">
-        <h2>Nossos Serviços</h2>
-        <div class="service-item">
-            <h3>Cyber Security</h3>
-            <p>Proteja sua infraestrutura digital com as melhores práticas de segurança.</p>
-        </div>
-        <div class="service-item">
-            <h3>Infraestrutura de Redes</h3>
-            <p>Planejamento e execução de cabeamento estruturado para uma rede segura e eficiente.</p>
-        </div>
-        <div class="service-item">
-            <h3>Segurança Eletrônica</h3>
-            <p>Sistemas avançados de vigilância para proteger seu ambiente físico.</p>
-        </div>
-        <div class="service-item">
-            <h3>Service Desk / Suporte</h3>
-            <p>Suporte técnico especializado para resolver seus problemas rapidamente.</p>
-        </div>
-        <div class="service-item">
-            <h3>IoT</h3>
-            <p>Transforme seu negócio com soluções inteligentes conectadas à Internet das Coisas.</p>
+    <section class="services">
+        <h2>Serviços</h2>
+        <div class="services-list">
+            <div class="service-item">
+                <h3>Cyber Security</h3>
+                <p>Oferecemos soluções avançadas de segurança cibernética para proteger sua empresa contra ameaças digitais e garantir a integridade de seus dados.</p>
+            </div>
+            <div class="service-item">
+                <h3>Infraestrutura e Cabeamento Estruturado</h3>
+                <p>Implementamos e gerenciamos a infraestrutura de TI necessária para garantir a conectividade e o desempenho de seus sistemas.</p>
+            </div>
+            <div class="service-item">
+                <h3>Segurança Eletrônica</h3>
+                <p>Contamos com sistemas de segurança eletrônica modernos, como câmeras de vigilância, alarmes e controle de acesso, para proteger seu patrimônio.</p>
+            </div>
+            <div class="service-item">
+                <h3>Service Desk e Suporte</h3>
+                <p>Nosso time de suporte está sempre pronto para ajudar sua empresa a resolver problemas técnicos e melhorar o desempenho dos seus sistemas.</p>
+            </div>
+            <div class="service-item">
+                <h3>Internet das Coisas (IoT)</h3>
+                <p>Implementamos soluções de IoT para integrar dispositivos e otimizar processos, tornando sua empresa mais inteligente e conectada.</p>
+            </div>
         </div>
     </section>
 
     <footer>
-        <p>&copy; 2024 TH Soluções em TI</p>
+        <p>© 2024 TH Soluções em TI</p>
     </footer>
 
     <script src="js/script.js"></script>
