--- a/servicos.html
+++ b/servicos.html
@@ -18,27 +18,29 @@
         </nav>
     </header>
 
-    <section class="services-list">
+    <section class="services">
         <h2>Nossos Serviços</h2>
-        <div class="service-item">
-            <h3>Cyber Security</h3>
-            <p>Proteja sua infraestrutura digital com as melhores práticas de segurança.</p>
-        </div>
-        <div class="service-item">
-            <h3>Infraestrutura de Redes</h3>
-            <p>Planejamento e execução de cabeamento estruturado para uma rede segura e eficiente.</p>
-        </div>
-        <div class="service-item">
-            <h3>Segurança Eletrônica</h3>
-            <p>Sistemas avançados de vigilância para proteger seu ambiente físico.</p>
-        </div>
-        <div class="service-item">
-            <h3>Service Desk / Suporte</h3>
-            <p>Suporte técnico especializado para resolver seus problemas rapidamente.</p>
-        </div>
-        <div class="service-item">
-            <h3>IoT</h3>
-            <p>Transforme seu negócio com soluções inteligentes conectadas à Internet das Coisas.</p>
+        <div class="services-list">
+            <div class="service-item">
+                <h3>Cyber Security</h3>
+                <p>Proteja sua infraestrutura digital com as melhores práticas de segurança.</p>
+            </div>
+            <div class="service-item">
+                <h3>Infraestrutura de Redes</h3>
+                <p>Planejamento e execução de cabeamento estruturado para uma rede segura e eficiente.</p>
+            </div>
+            <div class="service-item">
+                <h3>Segurança Eletrônica</h3>
+                <p>Sistemas avançados de vigilância para proteger seu ambiente físico.</p>
+            </div>
+            <div class="service-item">
+                <h3>Service Desk / Suporte</h3>
+                <p>Suporte técnico especializado para resolver seus problemas rapidamente.</p>
+            </div>
+            <div class="service-item">
+                <h3>IoT</h3>
+                <p>Transforme seu negócio com soluções inteligentes conectadas à Internet das Coisas.</p>
+            </div>
         </div>
     </section>
 
