--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </header>
 
     <section class="services">
+        <h2>Nossos Serviços</h2>
         <div class="service-item">
             <h3>Cyber Security</h3>
             <p>Proteja sua infraestrutura digital com as melhores práticas de segurança.</p>
