--- a/contatos.html
+++ b/contatos.html
@@ -20,7 +20,7 @@
 
     <section class="contact">
         <h2>Entre em Contato</h2>
-        <form>
+        <form action="#" method="POST">
             <label for="name">Nome:</label>
             <input type="text" id="name" name="name" required>
 
